--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   url_launcher: ^6.0.20
   image: ^3.1.3
+  overlay_support: ^1.2.1
+  cloud_firestore: ^3.1.12
+  firebase_core: ^1.14.1
+
 
 dev_dependencies:
   flutter_test:
